--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
 [project.scripts]
 lunch-bot = "lunch_bot.cli:main"
 
+[tool.setuptools.packages.find]
+include = ["lunch_bot*"]
+
 [build-system]
 requires = ["setuptools>=68.0"]
-build-backend = "setuptools.backends._legacy:_Backend"
+build-backend = "setuptools.build_meta"
